ArgoCD_cr/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "ingress-nginx"
    cert-manager.io/cluster-issuer: "argocd-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: argocd.petrenko.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: argocd-server
           port:
             name: https
  tls:
  - hosts:
    - argocd.petrenko.local
    secretName: argocd-tls
